objects/ACCObject2__c.object
<CustomObject>
    <description>123dsdsdsf1123411511111111qqq111</description>
    <fields>
        <fullName>Field1__c</fullName>
        <description>fdgfg</description>
        <label>Field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>test</description>
        <label>Field2</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>1233ds11234</description>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>ACCObject2</label>
    <nameField>
        <label>ACCObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObject2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>